# cis198-final-project

./: .gitignore  Cargo.toml  README.md  REPORT.md  index.html  search-index.js
ecs_client/: index.html  sidebar-items.js
ecs_client/action/: enum.ECSAction.html  index.html  sidebar-items.js
ecs_client/custom_headers/: index.html  sidebar-items.js  struct.XAmzDate.html  struct.XAmzTarget.html
ecs_client/custom_ser/: fn.is_none.html  index.html  sidebar-items.js
ecs_client/ecs_client/: constant.AMZ_SUBLEVEL_CONTENT_TYPE.html  constant.ECS_API_VERSION.html  constant.SERVICE_ABBREVIATION.html  index.html  sidebar-items.js  struct.ECSClient.html  type.Result.html
ecs_client/error/: index.html  sidebar-items.js  struct.ECSError.html
ecs_client/params/: index.html  sidebar-items.js  struct.ListClustersParams.html
ecs_client/region/: enum.Region.html  index.html
ecs_client/request/: constant.AMZ_SUBLEVEL_CONTENT_TYPE.html  index.html  sidebar-items.js  struct.ECSRequest.html
ecs_client/signature/: constant.AWS4.html  constant.AWS4_REQUEST.html  constant.AWS_ACCESS_KEY_ID.html  constant.AWS_SECRET_ACCESS_KEY.html  constant.CREDENTIAL.html  constant.SIGNATURE.html  constant.SIGNED_HEADERS.html  constant.SIGNING_ALGORITHM.html  constant.TERMINATION_STRING.html  fn.build_auth_header.html  fn.build_canonical_request.html  fn.build_credential_scope.html  fn.build_string_to_sign.html  fn.derive_signing_key.html  (+8 more)
src/: action.rs  custom_headers.rs  custom_ser.rs  ecs_client.rs  error.rs  lib.rs  lib.rs.in  params.rs  region.rs  request.rs  signature.rs
tests/: lib.rs
(+59 files in other folders)
